完善了登录功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    tools:background="@color/white"
     tools:context=".MainActivity">
 
 
-    <EditText
-        android:id="@+id/et_register_account"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_register"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="注册账号" />
-
-
-    <EditText
-        android:id="@+id/et_register_pswd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="注册密码" />
-
-    <EditText
-        android:id="@+id/et_register_check_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="注册的图片验证码" />
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:text="注册"
+        android:textColor="@color/commom_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_register_check_pic"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:id="@+id/iv_default_head"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="30dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_default_avatar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_register" />
 
-    <Button
-        android:id="@+id/btn_register"
+
+    <EditText
+        android:id="@+id/et_inpu_phone_num"
+        style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="注册" />
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="40dp"
+        android:hint="请输入手机号"
+        android:inputType="phone"
+        android:singleLine="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_default_head" />
+
+    <View
+        android:id="@+id/line_phone_num"
+        style="@style/HorizontalLineStyle"
+        android:layout_marginHorizontal="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_inpu_phone_num" />
+
+
+    <EditText
+        android:id="@+id/et_inpu_phone_password"
+        style="@style/EditTextStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp"
+        android:hint="请输入密码"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:singleLine="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line_phone_num" />
+
+    <View
+        android:id="@+id/line_phone_password"
+        style="@style/HorizontalLineStyle"
+        android:layout_marginHorizontal="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_inpu_phone_password" />
+
+    <EditText
+        android:id="@+id/et_inpu_yzm_text"
+        style="@style/EditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp"
+        android:hint="请输入验证码"
+        android:singleLine="true"
+        app:layout_constraintEnd_toStartOf="@id/iv_yzm_check_pic"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line_phone_password" />
+
+    <ImageView
+        android:id="@+id/iv_yzm_check_pic"
+        android:layout_width="50dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/et_inpu_yzm_text"
+        app:layout_constraintEnd_toEndOf="@id/et_inpu_phone_password"
+        app:layout_constraintStart_toEndOf="@+id/et_inpu_yzm_text"
+        app:layout_constraintTop_toTopOf="@id/et_inpu_yzm_text" />
+
+    <View
+        android:id="@+id/line_phone_check_yzm"
+        style="@style/HorizontalLineStyle"
+        android:layout_marginHorizontal="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_inpu_yzm_text" />
+
+
+    <TextView
+        android:id="@+id/tv_forget_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="忘记密码？"
+        android:textColor="#5A8DDF"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="@+id/line_phone_check_yzm"
+        app:layout_constraintTop_toBottomOf="@+id/line_phone_check_yzm" />
 
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="登陆" />
-</LinearLayout>
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/shape_bg_common_btn"
+        android:text="登录"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_yzm_check_pic" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
