重构找回密码

--- a/app/src/main/res/layout/check_sms_fragment_layout.xml
+++ b/app/src/main/res/layout/check_sms_fragment_layout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="#000"
-    tools:context=".ForgetPasswordActivity">
+    tools:background="#000">
 
     <include
         android:id="@+id/common_layout_top"
@@ -58,21 +57,37 @@
         app:layout_constraintTop_toTopOf="@id/et_forget_check_code" />
 
 
+    <EditText
+        android:id="@+id/et_forget_input_sms_code"
+        style="@style/EditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp"
+        android:hint="请输入短信验证码"
+        android:singleLine="true"
+        app:layout_constraintEnd_toStartOf="@+id/tv_count_down"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_forget_check_code" />
+
+
     <com.example.widgetview.CountDownTextView
         android:id="@+id/tv_count_down"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="验证码倒计时"
         android:gravity="center"
-        android:visibility="invisible"
+        android:padding="3dp"
+        android:text="点击获取验证码"
         android:textColor="@color/commom_blue"
-        app:layout_constraintBottom_toBottomOf="@+id/et_forget_check_code"
-        app:layout_constraintEnd_toEndOf="@id/line_phone_num"
-        app:layout_constraintStart_toEndOf="@+id/et_forget_check_code"
-        app:layout_constraintTop_toTopOf="@id/et_forget_check_code"/>
+        app:layout_constraintBottom_toBottomOf="@+id/et_forget_input_sms_code"
+        app:layout_constraintEnd_toEndOf="@+id/iv_yzm_check_pic"
+        app:layout_constraintStart_toEndOf="@+id/et_forget_input_sms_code"
+        app:layout_constraintTop_toTopOf="@+id/et_forget_input_sms_code" />
+
 
     <Button
-        android:id="@+id/btn_get_phone_check_code"
+        android:id="@+id/btn_verify_phone_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
@@ -82,9 +97,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/et_forget_check_code"
         app:layout_constraintStart_toStartOf="@+id/et_forget_check_code"
-        app:layout_constraintTop_toBottomOf="@+id/iv_yzm_check_pic" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/et_forget_input_sms_code" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
