--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
     </style>
 
 
+    <!-- 底部导航栏字体样式 -->
+    <style name="BottomTabTextStyle" >
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
