--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -5,13 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginBottom="314dp"
-        android:text="homeTv"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <com.youth.banner.Banner
+        android:id="@+id/top_bannear"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="5dp"
+        app:banner_indicator_gravity="right"
+        app:banner_indicator_marginBottom="8dp"
+        app:banner_indicator_marginRight="15dp"
+        app:banner_indicator_normal_color="@color/black"
+        app:banner_indicator_selected_color="@color/gray"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/top_bannear">
+
+        <net.lucode.hackware.magicindicator.MagicIndicator
+            android:id="@+id/home_fragment_magic_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/home_fragment_view_page2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
