--- a/app/src/main/res/layout/test_fragment_layout.xml
+++ b/app/src/main/res/layout/test_fragment_layout.xml
@@ -5,13 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/test_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="345dp"
-        android:layout_marginEnd="132dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_home_tab_sub"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="7dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
