--- a/app/src/main/res/layout/test_fragment_layout.xml
+++ b/app/src/main/res/layout/test_fragment_layout.xml
@@ -3,13 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="100dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_home_tab_sub"
+    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/tab_refresh_tab_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="7dp"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_home_tab_sub"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="7dp"/>
+
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
