--- a/app/src/main/res/layout/item_sub_tab_home_layout.xml
+++ b/app/src/main/res/layout/item_sub_tab_home_layout.xml
@@ -1,16 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/iv_sub_tab_cover"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="5dp"
+        android:background="#000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="5dp" />
 
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_sub_tab_vip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="vip"
+        android:textColor="#E91E63"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@+id/tv_sub_tab_title"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_sub_tab_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_sub_tab_title"
+        android:layout_marginLeft="3dp"/>
+
+    <TextView
+        android:id="@+id/tv_sub_tab_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="解决Java操作cookie无法写入的坑"
+        android:textSize="16sp"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:maxEms="7"
+        android:lines="1"
+        android:ellipsize="end"
+        app:layout_constraintTop_toTopOf="@id/iv_sub_tab_cover"
+        app:layout_constraintStart_toEndOf="@id/iv_sub_tab_cover"
+        android:layout_marginLeft="3dp"/>
+
+
+    <TextView
+        android:id="@+id/tv_sub_tab_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="nickName"
+        app:layout_constraintTop_toBottomOf="@+id/tv_sub_tab_title"
+        app:layout_constraintStart_toStartOf="@+id/tv_sub_tab_title"
+        android:layout_marginTop="3dp"/>
+
+
+    <ImageView
+        android:id="@+id/iv_sub_tab_author_head_pic"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="#000"
+        app:layout_constraintStart_toEndOf="@+id/tv_sub_tab_author"
+        app:layout_constraintTop_toTopOf="@id/tv_sub_tab_author"
+        app:layout_constraintBottom_toBottomOf="@id/tv_sub_tab_author"
+        android:layout_marginLeft="5dp"/>
+
+    <TextView
+        android:id="@+id/tv_sub_tab_create_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2021-06-27 01:59:37.0"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_sub_tab_cover"
+        app:layout_constraintStart_toEndOf="@id/iv_sub_tab_cover"
+        android:layout_marginLeft="3dp"/>
+
+
+    <TextView
+        android:id="@+id/tv_sub_tab_view_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="点赞数 100"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_sub_tab_create_time"
+        app:layout_constraintStart_toStartOf="@id/tv_sub_tab_create_time"
+        android:layout_marginBottom="3dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
