--- a/app/src/main/res/layout/article_comment_adapter_layout.xml
+++ b/app/src/main/res/layout/article_comment_adapter_layout.xml
@@ -6,92 +6,105 @@
     android:layout_marginBottom="5dp">
 
 
-    <ImageView
-        android:id="@+id/iv_article_comment_avter"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="5dp"
-        android:background="#000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/tv_article_comment_name"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_head_comment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="Nick"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_article_comment_avter"
-        app:layout_constraintStart_toEndOf="@+id/iv_article_comment_avter"
-        app:layout_constraintTop_toTopOf="@+id/iv_article_comment_avter" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_article_comment_head"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="comment"
-        android:textSize="14sp"
-        android:ems="10"
-        app:layout_constraintStart_toStartOf="@+id/tv_article_comment_name"
-        app:layout_constraintTop_toBottomOf="@+id/iv_article_comment_avter" />
+        <ImageView
+            android:id="@+id/iv_article_comment_avter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="5dp"
+            android:background="#000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/tv_article_comment_publish_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="2019-111"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_article_comment_head"
-        app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_head" />
+        <TextView
+            android:id="@+id/tv_article_comment_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Nick"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_article_comment_avter"
+            app:layout_constraintStart_toEndOf="@+id/iv_article_comment_avter"
+            app:layout_constraintTop_toTopOf="@+id/iv_article_comment_avter" />
+
+        <TextView
+            android:id="@+id/tv_article_comment_head"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:text="comment"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_article_comment_name"
+            app:layout_constraintTop_toBottomOf="@+id/iv_article_comment_avter" />
+
+        <TextView
+            android:id="@+id/tv_article_comment_publish_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="2019-111"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_article_comment_head"
+            app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_head" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <!--    二级评论回复-->
-    <ImageView
-        android:visibility="gone"
-        android:id="@+id/iv_article_comment_second_avter"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginRight="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_article_comment_second_name"
-        app:layout_constraintEnd_toStartOf="@+id/tv_article_comment_second_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_publish_time"
-        app:layout_constraintTop_toTopOf="@id/tv_article_comment_second_name" />
-
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/tv_article_comment_second_name"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_second_comment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_publish_time" />
-
-
-    <TextView
         android:visibility="gone"
-        android:id="@+id/tv_article_comment_second_comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="14sp"
-        android:ems="10"
-        app:layout_constraintEnd_toEndOf="@+id/tv_article_comment_second_name"
-        app:layout_constraintTop_toBottomOf="@+id/iv_article_comment_second_avter" />
+        app:layout_constraintTop_toBottomOf="@+id/cl_head_comment">
 
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/tv_article_comment_second_publish_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="15dp"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_second_comment" />
+        <ImageView
+            android:id="@+id/iv_article_comment_second_avter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/tv_article_comment_second_name"
+            app:layout_constraintTop_toTopOf="@+id/cl_second_comment" />
+
+        <TextView
+            android:id="@+id/tv_article_comment_second_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/cl_second_comment" />
+
+
+        <TextView
+            android:id="@+id/tv_article_comment_second_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_article_comment_second_name"
+            app:layout_constraintTop_toBottomOf="@+id/iv_article_comment_second_avter" />
+
+        <TextView
+            android:id="@+id/tv_article_comment_second_publish_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_second_comment" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
