增加了摸鱼模块

--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/articleFragment"
-        android:name="com.example.fragments.ArticleFragment"
+        android:name="com.example.fragments.MoYuFragment"
         android:label="ArticleFragment">
     </fragment>
 </navigation>
