--- a/app/src/main/res/layout/mo_yu_fragment_layout.xml
+++ b/app/src/main/res/layout/mo_yu_fragment_layout.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="277dp"
-        android:text="Article"
+    <include
+        android:id="@+id/mo_yu_top_layout"
+        layout="@layout/common_title_return_layout" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_mo_yu"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/mo_yu_top_layout" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
