--- a/app/src/main/res/menu/bottom_bar_menu.xml
+++ b/app/src/main/res/menu/bottom_bar_menu.xml
@@ -10,5 +10,5 @@
     <item
         android:id="@+id/articleFragment"
         android:icon="@drawable/home_article_selector"
-        android:title="文章" />
+        android:title="摸鱼" />
 </menu>
