--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_0.3">#b3ffffff</color>
-
+    <color name="pink">#F5EC0590</color>
 
     <color name="gray">#8fffffff</color>
 
