--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,21 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#00BCD4</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_80">#CC000000</color>
+
+    <color name="red">#FF0000</color>
+
     <color name="white">#FFFFFFFF</color>
     <color name="white_0.3">#b3ffffff</color>
     <color name="pink">#F5EC0590</color>
 
-    <color name="gray">#8fffffff</color>
+    <color name="gray">#68FFFFFF</color>
 
     <color name="commom_blue">#2196F3</color>
+
 
 </resources>
