--- a/app/src/main/res/layout/article_comment_child_layout.xml
+++ b/app/src/main/res/layout/article_comment_child_layout.xml
@@ -1,6 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <!--    二级评论回复-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_second_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cl_head_comment">
+
+        <ImageView
+            android:id="@+id/iv_article_comment_second_avter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/tv_article_comment_second_name"
+            app:layout_constraintTop_toTopOf="@+id/cl_second_comment" />
+
+        <TextView
+            android:id="@+id/tv_article_comment_second_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:text="111"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/cl_second_comment" />
+
+
+        <TextView
+            android:id="@+id/tv_article_comment_second_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:text="222"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_article_comment_second_name"
+            app:layout_constraintTop_toBottomOf="@+id/iv_article_comment_second_avter" />
+
+        <TextView
+            android:id="@+id/tv_article_comment_second_publish_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="10dp"
+            android:text="333"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_article_comment_second_comment" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
