--- a/app/src/main/res/layout/item_ver_comment_view_layout.xml
+++ b/app/src/main/res/layout/item_ver_comment_view_layout.xml
@@ -7,11 +7,11 @@
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iv_child_avator"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_child_name"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius="10dp" />
 
@@ -20,35 +20,50 @@
         android:id="@+id/tv_child_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="7dp"
         android:text="name"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_child_publish_timer"
+        app:layout_constraintStart_toEndOf="@+id/iv_child_avator"
         app:layout_constraintTop_toTopOf="@+id/iv_child_avator" />
+
+
+    <TextView
+        android:id="@+id/tv_reply_child_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="回复child信息"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_child_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_child_name"
+        app:layout_constraintTop_toTopOf="@+id/tv_child_name" />
+
 
     <TextView
         android:id="@+id/tv_child_publish_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="111"
         android:textSize="8sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_child_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_child_name" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_reply_child_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_reply_child_name"
+        app:layout_constraintTop_toTopOf="@+id/tv_reply_child_name" />
 
 
     <TextView
         android:id="@+id/tv_child_comment"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
-        android:lines="4"
+        android:maxWidth="200dp"
+        android:maxLines="4"
         android:text="322"
         android:textColor="#FF5722"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/iv_child_avator"
-        app:layout_constraintTop_toBottomOf="@+id/iv_child_avator" />
+        app:layout_constraintStart_toStartOf="@+id/tv_child_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_child_name" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
