--- a/app/src/main/res/layout/activity_tab_content.xml
+++ b/app/src/main/res/layout/activity_tab_content.xml
@@ -53,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="3dp"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
