--- a/app/src/main/res/layout/activity_tab_content.xml
+++ b/app/src/main/res/layout/activity_tab_content.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tab_content_top_return"
         layout="@layout/common_title_return_layout" />
 
+
     <com.example.webview.WebViewScrollView
         android:id="@+id/art_web_scroll"
         android:layout_width="match_parent"
@@ -22,7 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <!--            文章内容-->
             <com.example.webview.ArticleWebView
                 android:id="@+id/art_web_view"
@@ -34,13 +34,26 @@
                 android:overScrollMode="never"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/tv_prise_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="打赏列表"
+                android:textColor="#000"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/art_web_view" />
 
             <!--            文章评论消息-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/art_rv_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/art_web_view" />
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_prise_title" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -48,6 +61,7 @@
     </com.example.webview.WebViewScrollView>
 
 
+    <!--    发表-->
     <LinearLayout
         android:id="@+id/ll_comment"
         android:layout_width="match_parent"
