--- a/app/src/main/res/layout/article_comment_single_layout.xml
+++ b/app/src/main/res/layout/article_comment_single_layout.xml
@@ -5,15 +5,14 @@
     android:layout_height="wrap_content">
 
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <ImageView
         android:id="@+id/iv_par_avator"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:riv_corner_radius="10dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -66,9 +65,12 @@
         android:id="@+id/child_comment_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginTop="13dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/app_comment_bg"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="5dp"
         app:layout_constraintStart_toStartOf="@+id/iv_par_avator"
         app:layout_constraintTop_toBottomOf="@+id/tv_parent" />
 
