--- a/app/src/main/res/layout/item_ver_comment_view_layout.xml
+++ b/app/src/main/res/layout/item_ver_comment_view_layout.xml
@@ -5,15 +5,15 @@
     android:layout_height="wrap_content">
 
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <ImageView
         android:id="@+id/iv_child_avator"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:riv_corner_radius="10dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:text="name"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/iv_child_avator"
         app:layout_constraintTop_toTopOf="@+id/iv_child_avator" />
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="回复child信息"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/tv_child_name"
@@ -45,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="111"
+        android:textColor="@color/white"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_reply_child_name"
         app:layout_constraintStart_toEndOf="@+id/tv_reply_child_name"
@@ -61,7 +64,7 @@
         android:maxWidth="200dp"
         android:maxLines="4"
         android:text="322"
-        android:textColor="#FF5722"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/tv_child_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_child_name" />
 
