--- a/app/src/main/res/layout/activity_tab_content.xml
+++ b/app/src/main/res/layout/activity_tab_content.xml
@@ -34,6 +34,18 @@
                 android:overScrollMode="never"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
+            <ImageView
+                android:id="@+id/iv_article_qr_code"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_marginHorizontal="20dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/art_web_view" />
+
             <TextView
                 android:id="@+id/tv_prise_title"
                 android:layout_width="0dp"
@@ -43,9 +55,11 @@
                 android:text="打赏列表"
                 android:textColor="#000"
                 android:textSize="20sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/art_web_view" />
+                app:layout_constraintTop_toBottomOf="@+id/iv_article_qr_code" />
+
 
             <!--            文章评论消息-->
             <androidx.recyclerview.widget.RecyclerView
